fix mobile users list getting too long

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -194,6 +194,7 @@
 
 .input-group-btn:last-child > .btn{
   margin-left: 0px !important;
+  border-left: 0 !important;
 }
 
 .panel-chat {
